# SafeMedIA

./: .gitignore  .pre-commit-config.yaml  README.md  calculate_noise.py  mkdocs.yml  pyproject.toml
configs/: default.toml  none.toml  sample.toml  ssl.toml  ssl_full.toml  test_ssl_integration.toml  user.toml
docs/: index.md  ssl.md  types_of_dp.md
docs/api/: checkpoint.md  client.md  config.md  data.md  index.md  losses.md  models.md  privacy.md  server.md  tasks.md
docs/protocol/: communication.md  privacy_accounting.md
docs/schemas/: checkpoint.md  config.md  messages.md
dp_fedmed/: __init__.py  client_app.py  config.py  logging.py  server_app.py  task.py  utils.py
dp_fedmed/data/: __init__.py  cellpose.py
dp_fedmed/fl/: __init__.py  checkpoint.py  task.py
dp_fedmed/fl/base/: __init__.py  client.py  dataset.py  strategy.py
dp_fedmed/fl/checkpoint/: __init__.py  io.py  manager.py  models.py  pretrained.py
dp_fedmed/fl/client/: __init__.py  app.py  dp_client.py  factory.py
dp_fedmed/fl/server/: __init__.py  aggregation.py  app.py  factory.py  strategy.py
dp_fedmed/fl/ssl/: __init__.py  app.py  checkpoint.py  client.py  config.py  model.py  server_factory.py  strategy.py  task.py  transforms.py
dp_fedmed/losses/: __init__.py  dice.py
dp_fedmed/models/: __init__.py  unet2d.py
dp_fedmed/privacy/: __init__.py  accountant.py  budget_calculator.py
issues/: ray-metrics-agent-error.md
scripts/: convert_ssl_checkpoint.py  pretrain.py  run.sh  run_ssl_pretraining.py  test_implementation.sh
tests/: conftest.py  test_checkpointing.py  test_config.py  test_data.py  test_federated_ssl_pretraining.py  test_integration.py  test_losses.py  test_losses_extended.py  test_pretrained_federated.py  test_privacy_accountant.py  test_privacy_styles.py  test_resume.py  test_ssl_pretraining.py  test_strategy.py  test_task.py  test_utils.py
